src/objects/Dental_Practice__c.object
<CustomObject>
    <description>A table to store one record for each unique dental practice we will be looking at for the referral program</description>
    <fields>
        <fullName>Account_Dormant_Reason__c</fullName>
        <label>Account Dormant Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Branding</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Not Engaged/Not Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Info_for_Compliance__c</fullName>
        <description>Will be included on emailed compliance form</description>
        <label>Additional Info for Compliance</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Phone__c</fullName>
        <description>Alternate phone number for the practice</description>
        <label>Alt Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Phone_description__c</fullName>
        <label>Alt Phone description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_capturing_patient_reviews__c</fullName>
        <label>Are you capturing patient reviews</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No, but I am interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorized_Signer_Name__c</fullName>
        <label>Authorized Signer Name &amp; Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Buy_Completed_Date__c</fullName>
        <label>Best Buy Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Best_Buy_date_of_service__c</fullName>
        <label>Best Buy date of service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Best_Buy_rescheduled_date__c</fullName>
        <label>Best Buy rescheduled date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Best_Buy_site_service_date__c</fullName>
        <label>Best Buy site service date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Botox_Desirability__c</fullName>
        <label>Botox Desirability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Not so Happy</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t wait to go home</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t offer this service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Botox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Botox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bridge_Desirability__c</fullName>
        <label>Bridge Desirability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Not so Happy</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t wait to go home</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t offer this service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brochure_Number__c</fullName>
        <label>Brochure Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the center this practice will be used with for referral purposes</description>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Dental Practices</relationshipLabel>
        <relationshipName>Dental_Practices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chair_Notes__c</fullName>
        <label>Chair Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chairs__c</fullName>
        <label># Chairs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City the practice is located in</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearConnect_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClearConnect Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClearConnect_Live_Date__c</fullName>
        <label>ClearConnect Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClearConnect_Subscription_ID__c</fullName>
        <label>ClearConnect Subscription ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearConnect_UserName__c</fullName>
        <description>UserName for ClearConnect</description>
        <label>ClearConnect UserName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearConnect_UserPass__c</fullName>
        <label>ClearConnect UserPass</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearTrain_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClearTrain Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClearTrain_live_training_date__c</fullName>
        <label>ClearTrain live training date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClearVantage_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClearVantage Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClearVantage_Effective_Date__c</fullName>
        <description>Date ClearVantage was installed in the office</description>
        <label>ClearVantage Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ClearVantage_Live_Date__c</fullName>
        <label>ClearVantage Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClearViewTV_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClearViewTV complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClearViewTV_installation_Type__c</fullName>
        <label>ClearViewTV installation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wired</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClearViewTV_order__c</fullName>
        <label>ClearViewTV order #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearViewTV_site_installation_date__c</fullName>
        <label>ClearViewTV site installation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClearWeb_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClearWeb Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClearWeb_Domain_Name__c</fullName>
        <label>ClearWeb Domain Name</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ClearWeb_Password__c</fullName>
        <description>Admin password for Clearweb</description>
        <label>ClearWeb Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearWeb_Primary_Contact__c</fullName>
        <label>ClearWeb Primary Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearWeb_Sample_URL__c</fullName>
        <label>ClearWeb Temp URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ClearWeb_Username__c</fullName>
        <description>Admin username for ClearWeb Site</description>
        <label>ClearWeb Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Time__c</fullName>
        <label>Close Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Half_Hours_AM_PM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Ghost_Call__c</fullName>
        <label>Completed Ghost Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country the practice is located in</description>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crown_Bridge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crown &amp; Bridge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crown_Desirability__c</fullName>
        <label>Crown Desirability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Not so Happy</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t wait to go home</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t offer this service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_using_patient_survey_tools__c</fullName>
        <label>Currently using patient survey tools?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Assistant_1__c</fullName>
        <label>Dental Assistant (1)</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Assistant_2__c</fullName>
        <label>Dental Assistant (2)</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Implants__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Implants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_Public_Health__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Public Health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dentures_Desirability__c</fullName>
        <label>Dentures Desirability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Not so Happy</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t wait to go home</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t offer this service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dentures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dentures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_to_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display to Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_advertise_your_practice__c</fullName>
        <label>Do you advertise your practice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Thinking about it</fullName>
                </value>
                <value>
                    <fullName>Tried advertising and it did not help</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_belong_to_a_study_club__c</fullName>
        <label>Do you belong to a study club</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No, but I want to join one</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_currently_refer_all_on_4_patients__c</fullName>
        <label>Do you currently refer all-on-4 patients</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_a_TV__c</fullName>
        <label>Do you have a TV?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_a_patient__c</fullName>
        <label>Do you have a patient referral program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_a_reception_room_tv__c</fullName>
        <label>Do you have a reception room tv</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CASEY</fullName>
                </value>
                <value>
                    <fullName>NobelVision</fullName>
                </value>
                <value>
                    <fullName>I have no television in my reception area</fullName>
                </value>
                <value>
                    <fullName>I have regular television in my reception area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_an_apt_reminder_system__c</fullName>
        <label>Do you have an apt reminder system</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No but I am interested in one</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_intend_to_join_the_PP_program__c</fullName>
        <label>Do you intend to join the PP program?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_offer_team_incentives__c</fullName>
        <label>Do you offer team incentives?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_track_case_acceptance__c</fullName>
        <label>Do you track case acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_track_your_patient_source__c</fullName>
        <label>Do you track your patient source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Name_1__c</fullName>
        <label>Doctor Name (1)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Name_2__c</fullName>
        <label>Doctor Name (2)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Name_3__c</fullName>
        <label>Doctor Name (3)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_the_practice_have_a_TV__c</fullName>
        <label>Does the practice have a TV?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Date the practice will be effectively joining the practice privileges program</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endodontics_Desirability__c</fullName>
        <label>Endodontics Desirability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Not so Happy</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t wait to go home</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t offer this service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Endodontics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Endodontics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Failed_project_or_plan__c</fullName>
        <label>Failed project or plan</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_End__c</fullName>
        <description>Closing time for Friday</description>
        <label>Friday End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friday_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the practice is open on Fridays</description>
        <label>Friday Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friday_Start__c</fullName>
        <description>Opening time for Friday</description>
        <label>Friday Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Front_Desk_Person__c</fullName>
        <label>Front Desk Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Practice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Practice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue_Dedicated_to_marketing__c</fullName>
        <label>Gross Revenue Dedicated to marketing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>We don&apos;t advertise</fullName>
                </value>
                <value>
                    <fullName>0.25%</fullName>
                </value>
                <value>
                    <fullName>0.50%</fullName>
                </value>
                <value>
                    <fullName>0.75%</fullName>
                </value>
                <value>
                    <fullName>1%</fullName>
                </value>
                <value>
                    <fullName>1.25%</fullName>
                </value>
                <value>
                    <fullName>1.5%</fullName>
                </value>
                <value>
                    <fullName>1.75%</fullName>
                </value>
                <value>
                    <fullName>2%</fullName>
                </value>
                <value>
                    <fullName>2.25%</fullName>
                </value>
                <value>
                    <fullName>2.5%</fullName>
                </value>
                <value>
                    <fullName>2.75%</fullName>
                </value>
                <value>
                    <fullName>3%</fullName>
                </value>
                <value>
                    <fullName>3.25%</fullName>
                </value>
                <value>
                    <fullName>3.5%</fullName>
                </value>
                <value>
                    <fullName>3.75%</fullName>
                </value>
                <value>
                    <fullName>4%</fullName>
                </value>
                <value>
                    <fullName>4.25%</fullName>
                </value>
                <value>
                    <fullName>4.5%</fullName>
                </value>
                <value>
                    <fullName>4.75%</fullName>
                </value>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>5.25%</fullName>
                </value>
                <value>
                    <fullName>5.5%</fullName>
                </value>
                <value>
                    <fullName>5.75%</fullName>
                </value>
                <value>
                    <fullName>6%</fullName>
                </value>
                <value>
                    <fullName>6.25%</fullName>
                </value>
                <value>
                    <fullName>6.5%</fullName>
                </value>
                <value>
                    <fullName>6.75%</fullName>
                </value>
                <value>
                    <fullName>7%</fullName>
                </value>
                <value>
                    <fullName>7.25%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Growth_Goal_for_next_12_months__c</fullName>
        <label>Growth Goal for next 12 months</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+1%</fullName>
                </value>
                <value>
                    <fullName>+2%</fullName>
                </value>
                <value>
                    <fullName>+3%</fullName>
                </value>
                <value>
                    <fullName>+4%</fullName>
                </value>
                <value>
                    <fullName>+5%</fullName>
                </value>
                <value>
                    <fullName>+6%</fullName>
                </value>
                <value>
                    <fullName>+7%</fullName>
                </value>
                <value>
                    <fullName>+8%</fullName>
                </value>
                <value>
                    <fullName>+9%</fullName>
                </value>
                <value>
                    <fullName>+10%</fullName>
                </value>
                <value>
                    <fullName>+11%</fullName>
                </value>
                <value>
                    <fullName>+12%</fullName>
                </value>
                <value>
                    <fullName>+13%</fullName>
                </value>
                <value>
                    <fullName>+14%</fullName>
                </value>
                <value>
                    <fullName>+15%</fullName>
                </value>
                <value>
                    <fullName>+16%</fullName>
                </value>
                <value>
                    <fullName>+17%</fullName>
                </value>
                <value>
                    <fullName>+18%</fullName>
                </value>
                <value>
                    <fullName>+19%</fullName>
                </value>
                <value>
                    <fullName>+20% or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>